Fix text alignment in artes.css

--- a/artes.css
+++ b/artes.css
@@ -217,7 +217,7 @@ html, body {
     margin: 0;
     display: flex;
     align-items: center;
-  text-align: center;
+  text
 }
 
 .menu li {
